2022-10-12T08:31:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233192132 # 515
* notice: last 14d: unq all: 9 45
* notice: prev accum: outdated-unq outdated-all / unq all: 133 549 / 142 588
* notice: next accum: outdated-unq outdated-all / unq all: 133 549 / 143 594
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [] / [2022-10-12]

2022-10-12T02:32:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3231607520 # 514
* notice: last 14d: unq all: 9 39
* notice: prev accum: outdated-unq outdated-all / unq all: 133 549 / 141 583
* notice: next accum: outdated-unq outdated-all / unq all: 133 549 / 142 588
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +2 +27 -0 -0 / 2 27
* notice: removed / changed dates: [] / [2022-10-11]

2022-10-11T16:37:13Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3228619987
* notice: last 14d: unq all: 8 34
* notice: prev accum: outdated-unq outdated-all / unq all: 132 548 / 140 561
* notice: next accum: outdated-unq outdated-all / unq all: 133 549 / 141 583
* notice: prev exec diff / last date diff / accum: unq all: +1 +22 -0 -0 / +1 +22 -0 -0 / 1 22
* notice: removed / changed dates: [2022-09-27] / [2022-10-11]

2022-10-11T02:20:50Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3223673854
* notice: last 14d: unq all: 8 13
* notice: prev accum: outdated-unq outdated-all / unq all: 132 548 / 139 558
* notice: next accum: outdated-unq outdated-all / unq all: 132 548 / 140 561
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +2 +5 -0 -0 / 2 5
* notice: removed / changed dates: [] / [2022-10-10]

2022-10-10T16:37:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3220942470