@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-12T08:31:23Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
+  "timestamp" : "2022-10-13T02:24:48Z",
+  "count" : 8,
+  "count_minmax" : [ 6, 8 ],
+  "count_decinc" : [ -0, +8 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
