@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-12T08:31:23Z",
+  "timestamp" : "2022-10-13T02:24:48Z",
   "count_outdated" : 549,
   "uniques_outdated" : 133,
-  "count" : 594,
+  "count" : 596,
   "uniques" : 143,
   "views" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
+      "count": 8,
+      "count_minmax": [ 6, 8 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
