@@ -1,3 +1,11 @@
+2022-10-13T02:24:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3239244365 # 517
+* notice: last 14d: unq all: 9 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 133 549 / 143 594
+* notice: next accum: outdated-unq outdated-all / unq all: 133 549 / 143 596
+* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +1 +8 -0 -0 / 1 8
+* notice: removed / changed dates: [] / [2022-10-12]
+
 2022-10-12T08:31:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233192132 # 515
 * notice: last 14d: unq all: 9 45
